--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,32 +2,46 @@ name: Multiplatform build & push
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-  
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: reraw
+  VERSION: latest
+  TAG: ${{ github.ref_name }}
+
 jobs:
   push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-    if: github.event_name == 'push'
-    
-    env:
-      REGISTRY: ghcr.io
-      IMAGE_NAME: reraw
-      VERSION: latest
-      TAG: ${{ github.ref_name }}
+
+    strategy:
+      matrix:
+        go-version: ["1.24.x"]
 
     steps:
-      - uses: actions/checkout@v4
-        name: Check out code
-      - name: Install Go
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      #- name: Install Go
+      #  uses: actions/setup-go@v5
+      #  with:
+      #    go-version-file: "./go.mod"
+
+      - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
-          go-version-file: "./go.mod"
+          go-version: ${{ matrix.go-version }}
+
+      - name: Display Go version
+        run: go version
+
       - name: Run tests
         run: go test -v ./...
+
       - name: Docker build
         if: github.actor != 'dependabot[bot]'
         uses: mr-smithers-excellent/docker-build-push@v6
